Disabled scm_breeze for now

--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -1,9 +1,9 @@
 [user]
-	name = Matthew Rothenberg
-	email = mrothenberg@gmail.com
+	name = Maxim Novik
+	email = m.novik@qiwi.ru
 
 [github]
-	user = mroth
+	user = kramano
 
 [color]
 	ui = true
